[gd_scene load_steps=16 format=3 uid="uid://padbn8hpbpo6"]

[ext_resource type="Texture2D" uid="uid://5ut7n13w7gl0" path="res://Assets/UI/options_icons_etc/musicnote_1.png" id="1_01yro"]
[ext_resource type="Script" uid="uid://ihu4evvvu1ue" path="res://Scenes/Menus/SettingsScreen.gd" id="1_kuoau"]
[ext_resource type="Texture2D" uid="uid://dj5ymgtujgle6" path="res://Assets/UI/options_icons_etc/musicnote_2.png" id="2_kuoau"]
[ext_resource type="Theme" uid="uid://caljym4n8ghq8" path="res://Assets/Styles/DefaultTheme.tres" id="3_bd3ey"]
[ext_resource type="Texture2D" uid="uid://cwr3xy00vr1xt" path="res://Assets/UI/options_icons_etc/musicnote_1_small.png" id="4_o23xy"]
[ext_resource type="Texture2D" uid="uid://csa2i730dryet" path="res://Assets/UI/options_icons_etc/musicnote_2_small.png" id="5_b0u2s"]
[ext_resource type="Texture2D" uid="uid://biwe7c60f6r35" path="res://Assets/UI/options_icons_etc/speaker_3_small.png" id="6_ojke6"]
[ext_resource type="Texture2D" uid="uid://b5y0sal86emi0" path="res://Assets/UI/options_icons_etc/speaker_off_2_small.png" id="7_q57ny"]
[ext_resource type="Texture2D" uid="uid://c7viv7v30veef" path="res://Assets/UI/options_icons_etc/speaker_3.png" id="8_g8o6k"]
[ext_resource type="Texture2D" uid="uid://n0icqrejpobn" path="res://Assets/UI/options_icons_etc/speaker_off_2.png" id="9_3uef1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_umxxc"]
texture = ExtResource("1_01yro")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ovcku"]
texture = ExtResource("2_kuoau")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g648p"]
texture = ExtResource("8_g8o6k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t7vc4"]
texture = ExtResource("9_3uef1")

[sub_resource type="ButtonGroup" id="ButtonGroup_7smr3"]

[node name="SettingsScreen" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -25.0
offset_right = 65.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2
script = ExtResource("1_kuoau")

[node name="MusicMute" type="Button" parent="."]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_umxxc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ovcku")
theme_override_styles/hover = SubResource("StyleBoxTexture_umxxc")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ovcku")
toggle_mode = true
metadata/_edit_use_anchors_ = true

[node name="MusicCheckbox" type="CheckBox" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("3_bd3ey")
theme_override_icons/checked = ExtResource("4_o23xy")
theme_override_icons/unchecked = ExtResource("5_b0u2s")
button_pressed = true
text = "Music"

[node name="SFXCheckbox" type="CheckBox" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("3_bd3ey")
theme_override_icons/checked = ExtResource("6_ojke6")
theme_override_icons/unchecked = ExtResource("7_q57ny")
button_pressed = true
text = "SFX
"

[node name="SFXMute" type="Button" parent="."]
z_index = 3
z_as_relative = false
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_g648p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_t7vc4")
theme_override_styles/hover = SubResource("StyleBoxTexture_g648p")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_t7vc4")
toggle_mode = true
metadata/_edit_use_anchors_ = true

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Controls"]
layout_mode = 2
theme = ExtResource("3_bd3ey")
text = "Controls:"

[node name="HoldControls" type="CheckBox" parent="Controls"]
layout_mode = 2
theme = ExtResource("3_bd3ey")
button_pressed = true
button_group = SubResource("ButtonGroup_7smr3")
text = "Hold"

[node name="TapControls" type="CheckBox" parent="Controls"]
layout_mode = 2
theme = ExtResource("3_bd3ey")
button_group = SubResource("ButtonGroup_7smr3")
text = "Tap
"

[connection signal="toggled" from="MusicMute" to="." method="_on_music_mute_toggled"]
[connection signal="toggled" from="SFXMute" to="." method="_on_sfx_mute_toggled"]
[connection signal="toggled" from="Controls/HoldControls" to="." method="_on_hold_controls_toggled"]
